<resources>
    <string name="app_name">FingerPrnt</string>
    <!--    Start Activity -->
    <string name="welcome">Welcome</string>
    <string name="register_to_continue">Register to continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_already_have_an_account">Or already have an account?</string>
    <string name="sign_in">Sign In</string>

    <!-- Sign in Activity-->
    <string name="welcome_back">Hello, Welcome Back!</string>
    <string name="sign_in_with_credential">Or Sign in with your credentials</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <!-- Sign up Activity -->
    <string name="please_sign_up">Please, sign up to continue</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="sign_up_with_email">Or sign up with email</string>
    <string name="sign_up_with_phone_number">Or sign up with phone number</string>
    <string name="repeat_password">Repeat password</string>
    <string name="your_name">Your Name</string>
    <string name="eg_phone_number">123456789</string>
    <string name="next">Next</string>
    <!-- Verify Email Activity -->
    <string name="please_enter_verification_code">Please enter the verification code we sent to your phone number </string>
    <string name="verify">Verify</string>
    <!-- Forgot Password -->
    <string name="please_enter_email_address">Please enter your email address, we will send the verification code</string>
    <string name="send_verification_code">Send Verification Code</string>
    <!-- Create New Password -->
    <string name="create_new_password">Create a new password</string>
    <string name="your_new_password">Your new password</string>
    <string name="ok">OK</string>

    <string name="step1">Step 1 : Verify Phone Number</string>
</resources>
