<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.Welcome">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/roboto"
        android:lineHeight="14sp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:lineHeight="14sp"
        android:text="@string/register_to_continue"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:inputType="text"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18sp"
        app:cornerRadius="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:lineHeight="14sp"
        android:text="@string/or_already_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:inputType="text"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textSize="18sp"
        app:cornerRadius="25dp" />
</LinearLayout>