<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:gravity="center"
    tools:context=".activities.Signin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/roboto_light"
            android:text="@string/welcome_back"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_with_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:backgroundTint="#fff"
            android:drawableLeft="@drawable/google_icon"
            android:paddingHorizontal="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/colorPrimaryDark"
            app:cornerRadius="25dp"
            app:iconPadding="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_in_with_credential"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:startIconDrawable="@drawable/ic_email_black_24dp"
            app:startIconTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:startIconDrawable="@drawable/ic_lock_black_24dp"
            app:startIconTint="@color/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remember_me" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/forgot_password"
                android:textColor="#3182CE"
                android:textSize="12sp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/sign_in"
            android:textSize="16sp" />
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>