<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".activities.CreateNewPassword">

    <LinearLayout
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/roboto_light"
            android:text="@string/create_new_password"
            android:textSize="20sp" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="72dp"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:startIconDrawable="@drawable/ic_lock_black_24dp"
            app:startIconTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_new_password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:startIconDrawable="@drawable/ic_lock_black_24dp"
            app:startIconTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/roboto_bold"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/ok"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>