<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".activities.ForgotPassword">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_email_address"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:textAlignment="center"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="72dp"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:startIconDrawable="@drawable/ic_email_black_24dp"
            app:startIconTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/roboto_bold"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/send_verification_code"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>