<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".activities.VerifyPhoneNumber">
    <LinearLayout
        android:id="@+id/llprogressbar"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#CCFFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/pbText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="Please wait ..."/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/roboto_light"
        android:text="@string/step1"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="48dp"
        android:layout_marginHorizontal="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_verification_code"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+62123456789"
            android:fontFamily="@font/roboto_bold"
            android:textSize="18sp"
            android:textAlignment="center"
            android:paddingVertical="8dp"
            android:layout_gravity="center"/>
        <com.goodiebag.pinview.Pinview
            android:id="@+id/verification_code"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            app:pinWidth="42dp"
            app:pinHeight="42dp"
            app:pinLength="5"
            app:cursorVisible="false"
            app:forceKeyboard="true"
            app:inputType="number"
            app:password="false"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/verify_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/roboto_bold"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/verify"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>